# membench

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build.yml
src/: membench.cpp  version.h.in
